--- a/client/css/index.css
+++ b/client/css/index.css
@@ -54,15 +54,56 @@ body {
     position: relative;
 }
 
-.list-files :nth-child(odd) {
-    background: rgb(218, 217, 217);
-    border-radius: 1em;
-}
-
 .list-files li {
+    border: 1px solid rgb(195, 194, 194);
+    color: rgb(58, 58, 58);
+    border-radius: 0.5em;
     font-weight: 400;
     font-size: 1.1em;
+    padding: 0.5em;
+    margin-bottom: 5px;
     font-family: Georgia, "Times New Roman", Times, serif;
     list-style: none;
-    list-style-image: url("./assets/img/file.png");
+    list-style-image: url("../../assets/img/file.png");
+}
+
+.list-files li:hover {
+    transition: 0.5s background ease-in;
+    background: rgb(80, 80, 80);
+    color: aliceblue;
+}
+
+
+/* duplicated-files-modal*/
+
+.duplicated-files-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 12em;
+    top: 10em;
+    height: 60%;
+    width: 60%;
+    overflow: auto;
+    border-radius: 3em;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+/* The Close Button */
+
+.close-btn {
+    color: rgb(219, 0, 0);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-right: 25px;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    cursor: pointer;
+    color: rgb(61, 194, 0);
+    text-decoration: none;
 }
