--- a/client/css/index.css
+++ b/client/css/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .heading {
-    color: rgb(33, 106, 116);
+    color: rgb(4, 41, 46);
 }
 
 .text-center {
@@ -37,8 +37,9 @@ body {
 .input {
     width: 300px;
     height: 50px;
+    margin-top: 1em;
     color: black;
-    border-radius: 2em;
+    border-radius: 0.5em;
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 1.1em;
     font-weight: 600;
@@ -54,7 +55,8 @@ body {
     position: relative;
 }
 
-.list-files li {
+.list-files li,
+.duplicated-list-files li {
     border: 1px solid rgb(195, 194, 194);
     color: rgb(58, 58, 58);
     border-radius: 0.5em;
@@ -67,7 +69,8 @@ body {
     list-style-image: url("../../assets/img/file.png");
 }
 
-.list-files li:hover {
+.list-files li:hover,
+.duplicated-list-files li:hover {
     transition: 0.5s background ease-in;
     background: rgb(80, 80, 80);
     color: aliceblue;
@@ -85,9 +88,8 @@ body {
     height: 60%;
     width: 60%;
     overflow: auto;
-    border-radius: 3em;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 1em;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 
