--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+
 .container {
     display: grid;
-    grid-template: repeat(1, 500px) / repeat(2, 1fr);
+    grid-template: repeat(1, 95vh) / repeat(2, 1fr);
     grid-gap: 10px;
 }
 
@@ -10,7 +12,8 @@ body {
     background-repeat: round;
     background-size: contain;
     color: white;
-    font-family: "Noto Sans", sans-serif;
+    font-family: 'Raleway', sans-serif;
+
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -19,7 +22,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    position: relative;
 }
+
 
 .heading {
     color: rgb(4, 41, 46);
@@ -30,35 +36,105 @@ body {
 }
 
 .btn {
-    border: 2px solid gray;
+    border: 0;
     outline: none;
     color: #4ca1af;
-    width: 300px;
+    width: 50px;
     height: 50px;
-    background-image: linear-gradient(rgb(255, 255, 255), rgb(228, 228, 233));
     border-radius: 2em;
-    font-size: 1.1em;
-    font-weight: 600;
-    box-shadow: 0 7px 14px -3px rgba(45, 35, 66, 0.3), 0 2px 4px 0 rgba(45, 35, 66, 0.4), inset 0 -2px 0 0 #cfd1e3;
+    background: #2c3e50;
+    position: absolute;
+    right: 10px;
+    top: 34px;
+
+    
+}
+.btn i{
+    font-size: 32px;
+    font-weight: 900;
 }
 
 .btn:hover {
     cursor: pointer;
-    background-image: linear-gradient(rgb(216, 215, 215), rgb(156, 156, 156));
+    background: #4ca1af;
+    color: #2c3e50;
+    
 }
 
 .input {
-    width: 300px;
-    height: 50px;
+    outline: none;
+    border: 0;
+    width: 330px;
+    height: 64px;
     margin-top: 1em;
-    color: black;
-    border-radius: 0.5em;
-    font-size: 1.1em;
+    margin-bottom: 1em;
+    color: #2c3e50;
+    border-radius: 2rem;
+    font-size: 1.7em;
     font-weight: 600;
-    text-align: center;
-    box-shadow: 0 7px 14px -3px rgba(45, 35, 66, 0.3), 0 2px 4px 0 rgba(45, 35, 66, 0.4), inset 0 -2px 0 0 #cfd1e3;
+    text-align: left;
+    box-shadow: -9px 9px 6px #00000063;
+    padding: 0 60px 0 20px;
+    
+    
+    
 }
 
+.input::placeholder{
+    color: #2c3e50;
+}
+.search-form{
+    
+    background: #2c3e50;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 20px 10px 45px 10px;
+    margin-left: 15px;
+    border-radius: 3vh;
+
+    position: fixed;
+    
+}
+.search-form p{
+    font-size: 1.250em;
+}
+.search-form h1{
+    font-size: 2.500em;
+    font-weight: 900;
+}
+.search-btn{
+    position: relative;
+
+}
+
+.system-info{
+    background: #4ca1af;
+    width: 300px;
+    height: 300px;
+    align-self: flex-start;
+    justify-self: flex-end;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 3vh;
+
+    position: fixed;
+    bottom: 10px;
+    
+}
+.system-info h2{
+    font-size: 2.500em;
+    font-weight: 100;
+}
+.system-info ul li{
+    font-size: 1.250em;
+}
 .error {
     color: red;
     background: cornsilk;
@@ -66,21 +142,45 @@ body {
 
 .list {
     position: relative;
+
+}
+.list-container{
+    background: #011A33;
+    width: 90%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3vh;
+}
+.list-container h1{
+    font-size: 2.500em;
 }
 
 .list-files li,
 .duplicated-list-files li {
-    border: 0.5px solid rgb(228, 228, 228);
-    border-radius: 0.5em;
+    border: 0;
+    
     font-weight: 600;
     font-size: 1.1em;
     padding: 0.5em;
     margin-bottom: 8px;
     list-style: none;
-    list-style-image: url("../../assets/img/file.png");
-    box-shadow: 0 7px 14px -3px rgba(45, 35, 66, 0.3), 0 2px 4px 0 rgba(45, 35, 66, 0.4), inset 0 -2px 0 0 #cfd1e3;
-}
 
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    
+    
+}
+.list-files li::before, .duplicated-list-files li::before{
+    content: "\e2c7";
+    font-family: 'Material Icons';
+    font-size: 32px;
+    margin-right: 10px;
+}
 .list-files li:hover,
 .duplicated-list-files li:hover {
     transition: 0.3s background ease-in;
